# trunk_manager

./: .passwords.json  Cargo.toml
src/: main.rs
src/extension/: manifest.json  popup.html  popup.js
