[package]
name = "trunk_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.15"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.3"
regex = "1.10.5"
getrandom = { version = "0.2.15", features = ["wasm-bindgen", "js"] }
wasm-bindgen = "0.2.92"
actix-web = "4.8.0"
actix-cors = "0.7.0"
actix-session = { version = "0.9.0", features = ["redis-rs-session"] }
redis = "0.25.4"
env_logger = "0.11.3"